Added homepage for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -54,5 +54,5 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
-  "homepage": "https://abhishek02.github.io/widget"
+  "homepage": "https://abhisheksaini02.github.io/audioForm"
 }
