--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "widget",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://abhisheksaini02.github.io/audioForm",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --config webpack.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -53,6 +54,5 @@
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
-  },
-  "homepage": "https://abhisheksaini02.github.io/audioForm"
+  }
 }
